// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForwardIcon renders correctly 1`] = `
<svg
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Forward Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M15.8.133h-16v16h16z"
    />
    <path
      d="M5.194 12.857a.75.75 0 0 0 1.063 1.057l5.24-5.263a.75.75 0 0 0-.001-1.059l-5.24-5.238a.75.75 0 1 0-1.06 1.06l4.711 4.71-4.713 4.733z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`ForwardIcon renders large correctly 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Forward Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M24 0H0v24h24z"
    />
    <path
      d="M13.197 20.738a.75.75 0 0 0 1.106 1.013l8.47-9.252a.75.75 0 0 0 0-1.013l-8.47-9.243a.75.75 0 1 0-1.106 1.014l8.006 8.736-8.006 8.745z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`ForwardIcon renders xSmall correctly 1`] = `
<svg
  height="12"
  viewBox="0 0 12 12"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Forward Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    transform="translate(-.2 -.867)"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      y="1"
    />
    <path
      d="M3.726 10.446a.75.75 0 1 0 1.055 1.066l4.024-3.986a.75.75 0 0 0 0-1.065l-4.01-3.973a.75.75 0 0 0-1.056 1.066l3.472 3.44-3.485 3.452z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;
